feat: implementar use cases de confirmação e cancelamento de consulta; ajustes em testes e melhorias de legibilidade
- Implementadas classes ConfirmaConsultaUseCase e CancelaConsultaUseCase com regras de negócio aplicadas.
- Criados testes unitários para ConfirmaConsultaUseCaseTest e CancelaConsultaUseCaseTest.
- Refatorados testes do AgendarConsultaUseCaseTest para corrigir mocks, status da consulta e cobrir todos os cenários.
- Refatorado método buscarPorId em ConsultaRepository para lançar exceção específica quando a consulta não for encontrada.
- Substituído uso de Collectors.toList() por chamadas diretas a List.of(...) ou .stream().toList() conforme recomendado pelo SonarQube.
- Garantido uso adequado de Optional e melhorias gerais de legibilidade e responsabilidade nas camadas da aplicação.